fixed video overflow, added social stickers, text revisions, qol additions

--- a/stil.css
+++ b/stil.css
@@ -34,9 +34,7 @@
 
 }
 
-.video-container{
-	display: none;
-}
+
 
 .video-mobile-container{
 	height: 480px;
@@ -59,17 +57,6 @@
 	display: none;
 }
 
-.instagram-sticker{
-	display: inline-block;
-	width: 30px;
-	margin-left: 15px;
-	margin-top: 15px;
-	float: left;
-	z-index: 2;
-	position: fixed;
-	top: 0;
-	left: 0;
-}
 .annecy-sticker{
 	max-width: 130px;
 	width: 100%;
@@ -78,6 +65,7 @@
 	position: fixed;
 	top: 0;
 	right: 0;
+
 }
 
 .annecy-sticker-desktop{
@@ -184,7 +172,7 @@ list-style: none;
 .timeline-bullets li:not(:last-child):after {
     content: '';
     width: 3px;
-    height: 100%;
+    height: 122%;
     background: #297dbd;
     position: absolute;
     left: -7px;
@@ -301,13 +289,15 @@ left: -100%;
 	}
 
 	.video-container{
-		display: block;
-		position: fixed;
-	    overflow: hidden;
-	    z-index: 0;
-	    height: 100vh;
-	    left: 0px;
-	    top: -8%;
+		overflow: hidden;
+        z-index: 0;
+        left: 0px;
+        top: -1%;
+        background: #d9e1ff;
+        position: absolute;
+        padding: 0px;
+        height: 25vw;
+        margin-top: -20px;
 	}
 
 	.video-mobile-container{
@@ -331,13 +321,14 @@ left: -100%;
         background: url(media/desktop/menu_bg.png);
         background-size: 100vw;
         background-repeat: no-repeat;
-        background-position-y: 5px;
+        background-position-y: -10px;
         color: white;
         pointer-events: none;
+        opacity: 0.8;
 	}
 
 	.navigacija{
-	top: 40px;
+	top: 15px;
     left: 0px;
     margin: 0 auto;
     z-index: 4;
@@ -384,7 +375,7 @@ left: -100%;
 	.logo{
 		top: 10px;
 		margin: 0 auto;
-		width: 10vw;
+		width: 7.5vw;
 		display: block;
 		z-index: 3;
 		position: fixed;
@@ -394,10 +385,20 @@ left: -100%;
 		display: none;
 	}
 	.instagram-sticker{
-		position: absolute;
-		top: 0px;
-		display: none;
+        width: 2.5vw;
+        position: fixed;
+        top: 10px;
+        z-index: 3;
+        right: 10vw;
 	}
+
+	.twitter-sticker{
+            width: 3.5vw;
+            position: fixed;
+            top: 6px;
+            z-index: 3;
+            right: 5vw;
+    	}
 	.annecy-sticker{
 		top: 0;
 		right: 0;
@@ -423,6 +424,7 @@ left: -100%;
 		    width: 100%;
 		    left: 0px;
 		    z-index: 0;
+		    border-radius: 30px;
 	}
 
 }
